config/dwm/error.log
dwm build options:
CFLAGS   = -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_XOPEN_SOURCE=700L -DVERSION="6.4" -DXINERAMA
LDFLAGS  = -L/usr/X11R6/lib -lX11 -lXinerama -lfontconfig -lXft -lX11-xcb -lxcb -lxcb-res 
CC       = cc
cc -c -std=c99 -pedantic -Wall -Wno-deprecated-declarations -Os -I/usr/X11R6/include -I/usr/include/freetype2 -D_DEFAULT_SOURCE -D_BSD_SOURCE -D_XOPEN_SOURCE=700L -DVERSION=\"6.4\" -DXINERAMA dwm.c
In file included from dwm.c:338:
config.h:88:49: error: ‘setcfact’ undeclared here (not in a function); did you mean ‘setmfact’?
   88 |   &((Keychord){1, {{MODKEY|ShiftMask, XK_h}},   setcfact,       {.f = +0.25} }),
      |                                                 ^~~~~~~~
      |                                                 setmfact
config.h:92:51: error: ‘incrgaps’ undeclared here (not in a function)
   92 |   &((Keychord){1, {{MODKEY|Mod1Mask, XK_u}},      incrgaps,       {.i = +1 } }),
      |                                                   ^~~~~~~~
config.h:94:57: error: ‘incrigaps’ undeclared here (not in a function)
   94 |         &((Keychord){1, {{MODKEY|Mod1Mask, XK_i}},      incrigaps,      {.i = +1 } }),
      |                                                         ^~~~~~~~~
config.h:96:57: error: ‘incrogaps’ undeclared here (not in a function)
   96 |         &((Keychord){1, {{MODKEY|Mod1Mask, XK_o}},      incrogaps,      {.i = +1 } }),
      |                                                         ^~~~~~~~~
config.h:98:57: error: ‘incrihgaps’ undeclared here (not in a function)
   98 |         &((Keychord){1, {{MODKEY|Mod1Mask, XK_6}},      incrihgaps,     {.i = +1 } }),
      |                                                         ^~~~~~~~~~
config.h:100:57: error: ‘incrivgaps’ undeclared here (not in a function)
  100 |         &((Keychord){1, {{MODKEY|Mod1Mask, XK_7}},      incrivgaps,     {.i = +1 } }),
      |                                                         ^~~~~~~~~~
config.h:102:57: error: ‘incrohgaps’ undeclared here (not in a function)
  102 |         &((Keychord){1, {{MODKEY|Mod1Mask, XK_8}},      incrohgaps,     {.i = +1 } }),
      |                                                         ^~~~~~~~~~
config.h:104:57: error: ‘incrovgaps’ undeclared here (not in a function)
  104 |         &((Keychord){1, {{MODKEY|Mod1Mask, XK_9}},      incrovgaps,     {.i = +1 } }),
      |                                                         ^~~~~~~~~~
config.h:106:57: error: ‘togglegaps’ undeclared here (not in a function); did you mean ‘toggletag’?
  106 |         &((Keychord){1, {{MODKEY|Mod1Mask, XK_0}},      togglegaps,     {0} }),
      |                                                         ^~~~~~~~~~
      |                                                         toggletag
config.h:107:67: error: ‘defaultgaps’ undeclared here (not in a function); did you mean ‘DefaultGC’?
  107 |         &((Keychord){1, {{MODKEY|Mod1Mask|ShiftMask, XK_0}},      defaultgaps,    {0} }),
      |                                                                   ^~~~~~~~~~~
      |                                                                   DefaultGC
config.h:121:66: warning: initialization of ‘unsigned int’ from ‘void (*)(const Arg *)’ makes integer from pointer without a cast [-Wint-conversion]
  121 |         &((Keychord){1, MODKEY,                       XK_minus,  setgaps,        {.i = -1 } }),
      |                                                                  ^~~~~~~
config.h:121:66: note: (near initialization for ‘(anonymous).keys[1].mod’)
config.h:121:66: error: initializer element is not computable at load time
config.h:121:66: note: (near initialization for ‘(anonymous).keys[1].mod’)
config.h:121:9: warning: braces around scalar initializer
  121 |         &((Keychord){1, MODKEY,                       XK_minus,  setgaps,        {.i = -1 } }),
      |         ^
config.h:121:9: note: (near initialization for ‘(anonymous).keys[1].keysym’)
config.h:121:83: error: field name not in record or union initializer
  121 |         &((Keychord){1, MODKEY,                       XK_minus,  setgaps,        {.i = -1 } }),
      |                                                                                   ^
config.h:121:83: note: (near initialization for ‘(anonymous).keys[1].keysym’)
config.h:121:11: warning: missing braces around initializer [-Wmissing-braces]
  121 |         &((Keychord){1, MODKEY,                       XK_minus,  setgaps,        {.i = -1 } }),
      |           ^
config.h:122:66: warning: initialization of ‘unsigned int’ from ‘void (*)(const Arg *)’ makes integer from pointer without a cast [-Wint-conversion]
  122 |         &((Keychord){1, MODKEY,                       XK_equal,  setgaps,        {.i = +1 } }),
      |                                                                  ^~~~~~~
config.h:122:66: note: (near initialization for ‘(anonymous).keys[1].mod’)
config.h:122:66: error: initializer element is not computable at load time
config.h:122:66: note: (near initialization for ‘(anonymous).keys[1].mod’)
config.h:122:9: warning: braces around scalar initializer
  122 |         &((Keychord){1, MODKEY,                       XK_equal,  setgaps,        {.i = +1 } }),
      |         ^
config.h:122:9: note: (near initialization for ‘(anonymous).keys[1].keysym’)
config.h:122:83: error: field name not in record or union initializer
  122 |         &((Keychord){1, MODKEY,                       XK_equal,  setgaps,        {.i = +1 } }),
      |                                                                                   ^
config.h:122:83: note: (near initialization for ‘(anonymous).keys[1].keysym’)
config.h:122:11: warning: missing braces around initializer [-Wmissing-braces]
  122 |         &((Keychord){1, MODKEY,                       XK_equal,  setgaps,        {.i = +1 } }),
      |           ^
config.h:123:66: warning: initialization of ‘unsigned int’ from ‘void (*)(const Arg *)’ makes integer from pointer without a cast [-Wint-conversion]
  123 |         &((Keychord){1, MODKEY|ShiftMask,             XK_equal,  setgaps,        {.i = 0  } }),
      |                                                                  ^~~~~~~
config.h:123:66: note: (near initialization for ‘(anonymous).keys[1].mod’)
config.h:123:66: error: initializer element is not computable at load time
config.h:123:66: note: (near initialization for ‘(anonymous).keys[1].mod’)
config.h:123:9: warning: braces around scalar initializer
  123 |         &((Keychord){1, MODKEY|ShiftMask,             XK_equal,  setgaps,        {.i = 0  } }),
      |         ^
config.h:123:9: note: (near initialization for ‘(anonymous).keys[1].keysym’)
config.h:123:83: error: field name not in record or union initializer
  123 |         &((Keychord){1, MODKEY|ShiftMask,             XK_equal,  setgaps,        {.i = 0  } }),
      |                                                                                   ^
config.h:123:83: note: (near initialization for ‘(anonymous).keys[1].keysym’)
make: *** [Makefile:18: dwm.o] Error 1
